layer connections basic-need packages and program.cs has been set up

--- a/src/BarakaShop.Service/BarakaShop.Service.csproj
+++ b/src/BarakaShop.Service/BarakaShop.Service.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BarakaShop.DataAccess\BarakaShop.DataAccess.csproj" />
+    <ProjectReference Include="..\BarakaShop.Domain\BarakaShop.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
