--- a/src/BarakaShop.WebApi/appsettings.json
+++ b/src/BarakaShop.WebApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "SqlServerConnection": "Server=LAPTOP-HCQLG6VV;Database=BarakaShop_db;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;",
+        "PostgresSqlConnection": "Host=localhost;Port=5432;Database=BarakaShop;Username=postgres;Password=supervisor_z;"
+    }
 }
