--- a/src/BarakaShop.DataAccess/BarakaShop.DataAccess.csproj
+++ b/src/BarakaShop.DataAccess/BarakaShop.DataAccess.csproj
@@ -20,7 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Contexts\" />
+    <Folder Include="EntityConfigurations\" />
+    <Folder Include="UnitOfWorks\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
 </Project>
